--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,4 @@ project(SPL_Assignment1)
 
 set(CMAKE_CXX_STANDARD 11)
 
-add_executable(SPL_Assignment1 main.cpp)
+add_executable(SPL_Assignment1 src/main.cpp)
